--- a/FrontEnd/src/main/resources/Application.css
+++ b/FrontEnd/src/main/resources/Application.css
@@ -1,3 +1,23 @@
-.header-title {
-    -fx-font-weight: bold !important;
+.application {
+    -fx-background-color: #ffffff;
+}
+
+.drop-file-chooser {
+    -fx-background-color: #eeeeee;
+    -fx-background-radius: 20px;
+
+    -fx-border-style: dashed;
+    -fx-border-color: #bbbbbb;
+    -fx-border-width: 8px;
+    -fx-border-radius: 20px;
+
+    -fx-effect: innershadow(gaussian, #000000, 10, 0.0, 0, 0);
+
+    -fx-cursor: hand;
+}
+
+.transform-button {
+    -fx-font-size: 20px;
+    -fx-effect: dropshadow(gaussian, #00000022, 10, 0.0, 0, 5);
+    -fx-border-width: 0px;
 }
