--- a/FrontEnd/src/main/resources/Application.css
+++ b/FrontEnd/src/main/resources/Application.css
@@ -1,23 +1,33 @@
 .application {
     -fx-background-color: #ffffff;
 }
-
 .drop-file-chooser {
-    -fx-background-color: #eeeeee;
+    -fx-background-color: #ffffff;
     -fx-background-radius: 20px;
 
     -fx-border-style: dashed;
-    -fx-border-color: #bbbbbb;
-    -fx-border-width: 8px;
+    -fx-border-color: #0e7afe;
+    -fx-border-width: 2px;
     -fx-border-radius: 20px;
-
-    -fx-effect: innershadow(gaussian, #000000, 10, 0.0, 0, 0);
 
     -fx-cursor: hand;
 }
 
 .transform-button {
     -fx-font-size: 20px;
-    -fx-effect: dropshadow(gaussian, #00000022, 10, 0.0, 0, 5);
+    -fx-font-weight: bold;
     -fx-border-width: 0px;
+    -fx-background-color: #0e7afe;
+    -fx-text-fill: #ffffff;
+}
+
+.transform-button:hover {
+    -fx-background-color: #2488fe;
+}
+
+.transform-button:pressed {
+    -fx-background-color: #4fa1fe;
+}
+.transform-button:disabled {
+    -fx-background-color: #bbbbbb;
 }
