--- a/FrontEnd/src/main/resources/Application.fxml
+++ b/FrontEnd/src/main/resources/Application.fxml
@@ -1,15 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
 <?import nl.mikero.spiner.frontend.control.DropFileChooser?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@Application.css" />
     </stylesheets>
+    <top>
+        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+           <children>
+               <ToggleButton fx:id="epubFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" selected="true" styleClass="epub" text="EPUB">
+               <toggleGroup>
+                  <ToggleGroup fx:id="format" />
+               </toggleGroup>
+            </ToggleButton>
+               <ToggleButton fx:id="latexFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="latex" text="LaTeX" toggleGroup="$format">
+
+            </ToggleButton>
+           </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+        </HBox>
+    </top>
     <center>
         <DropFileChooser fx:id="dropFileChooser">
             <BorderPane.margin>
