--- a/FrontEnd/src/main/resources/Application.fxml
+++ b/FrontEnd/src/main/resources/Application.fxml
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 
 <?import nl.mikero.spiner.frontend.control.DropFileChooser?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8"
+            xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@Application.css" />
+        <URL value="@Application.css"/>
     </stylesheets>
     <top>
         <HBox alignment="CENTER" BorderPane.alignment="CENTER">
-           <children>
-               <ToggleButton fx:id="epubFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" selected="true" styleClass="epub" text="EPUB">
-               <toggleGroup>
-                  <ToggleGroup fx:id="format" />
-               </toggleGroup>
+            <ToggleButton fx:id="epubFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                          selected="true" styleClass="epub" text="EPUB">
+                <toggleGroup>
+                    <ToggleGroup fx:id="format"/>
+                </toggleGroup>
             </ToggleButton>
-               <ToggleButton fx:id="latexFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="latex" text="LaTeX" toggleGroup="$format">
-
-            </ToggleButton>
-           </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
+            <ToggleButton fx:id="latexFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                          styleClass="latex" text="LaTeX" toggleGroup="$format"/>
+            <opaqueInsets>
+                <Insets/>
+            </opaqueInsets>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </padding>
         </HBox>
     </top>
     <center>
@@ -45,9 +38,11 @@
         </DropFileChooser>
     </center>
     <bottom>
-        <Button fx:id="transformButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onTransformButtonClicked" styleClass="transform-button" text="Transform" BorderPane.alignment="CENTER">
+        <Button fx:id="transformButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                mnemonicParsing="false" onAction="#onTransformButtonClicked" styleClass="transform-button"
+                text="Transform" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" />
+                <Insets bottom="10.0" left="10.0" right="10.0"/>
             </BorderPane.margin>
         </Button>
     </bottom>
