Redesign URL to new style (the orange one)

--- a/FrontEnd/src/main/resources/Application.css
+++ b/FrontEnd/src/main/resources/Application.css
@@ -1,4 +1,7 @@
 .application {
+    -fx-border-color: #fc3b04;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
     -fx-background-color: #ffffff;
 }
 .drop-file-chooser {
@@ -6,45 +9,53 @@
     -fx-background-radius: 20px;
 
     -fx-border-style: dashed;
-    -fx-border-color: #0e7afe;
+    -fx-border-color: #aaaaaa;
     -fx-border-width: 2px;
     -fx-border-radius: 20px;
 
     -fx-cursor: hand;
 }
-
+.header {
+    -fx-background-color: #fc3b04;
+    -fx-background-image: url("triangles.png");
+}
+.footer {
+    -fx-background-color: #f6f7f8;
+    -fx-border-color: #dee5e8;
+    -fx-border-style: solid;
+}
 .transform-button {
     -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-border-width: 0px;
-    -fx-background-color: #0e7afe;
+    -fx-background-color: #fc3b04;
     -fx-text-fill: #ffffff;
 }
 
 .transform-button:hover {
-    -fx-background-color: #2488fe;
+    -fx-background-color: #e43503;
 }
 
 .transform-button:pressed {
-    -fx-background-color: #4fa1fe;
+    -fx-background-color: #fc4f1d;
 }
 .transform-button:disabled {
     -fx-background-color: #bbbbbb;
 }
 
 .toggle-button {
-    -fx-background-color: #ffffff;
-    -fx-border-color: #0e7afe;
+    -fx-background-color: transparent;
+    -fx-border-color: #ffffff;
     -fx-border-width: 1px;
     -fx-min-width: 80px;
     -fx-font-weight: bold;
-    -fx-text-fill: #aaaaaa;
+    -fx-text-fill: #ffffff;
 }
 
 .toggle-button:selected {
-    -fx-background-color: #0e7afe;
+    -fx-background-color: #ffffff;
     -fx-background-insets: 0;
-    -fx-text-fill: #ffffff;
+    -fx-text-fill: #fc3b04;
     -fx-border-width: 0px;
 }
 
@@ -59,7 +70,7 @@
 }
 
 .progress-indicator {
-    -fx-progress-color: #0e7afe;
+    -fx-progress-color: #fc3b04;
     -fx-spin-enabled: true;
 }
 
@@ -69,4 +80,31 @@
 
 .progress-indicator .text {
     -fx-font-weight: bold;
+}
+
+.close-button,
+.help-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-text-fill: #ffffff;
+}
+
+.close-button {
+    -fx-border-radius: 0;
+    -fx-background-radius: 0;
+}
+.close-button:hover {
+    -fx-background-color: #e43503;
+}
+.close-bottom:pressed {
+    -fx-background-color: transparent;
+}
+
+.help-button {
+    -fx-background-radius: 100%;
+    -fx-opacity: 0.5;
+}
+.help-button:hover {
+    -fx-background-color: #e43503;
+    -fx-opacity: 1.0;
 }
