--- a/FrontEnd/src/main/resources/Application.fxml
+++ b/FrontEnd/src/main/resources/Application.fxml
@@ -1,33 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <?import nl.mikero.spiner.frontend.control.DropFileChooser?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8"
+            prefWidth="600.0" styleClass="application" xmlns="http://javafx.com/javafx/8.0.112"
             xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@Application.css"/>
     </stylesheets>
     <top>
-        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
-            <ToggleButton fx:id="epubFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                          selected="true" styleClass="epub" text="EPUB">
-                <toggleGroup>
-                    <ToggleGroup fx:id="format"/>
-                </toggleGroup>
-            </ToggleButton>
-            <ToggleButton fx:id="latexFormatButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                          styleClass="latex" text="LaTeX" toggleGroup="$format"/>
-            <opaqueInsets>
-                <Insets/>
-            </opaqueInsets>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </padding>
+        <HBox fx:id="header" maxHeight="60" minHeight="60.0" styleClass="header">
+            <ImageView fx:id="logo" fitHeight="40.0" fitWidth="40.0" mouseTransparent="true" preserveRatio="true">
+                <Image url="@icon_white.png"/>
+                <HBox.margin>
+                    <Insets top="7.0"/>
+                </HBox.margin>
+            </ImageView>
+            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" mouseTransparent="true" text="Spiner"
+                   textFill="WHITE">
+                <font>
+                    <Font name="SansSerif Regular" size="23.0"/>
+                </font>
+            </Label>
+            <HBox alignment="CENTER" BorderPane.alignment="CENTER" HBox.hgrow="ALWAYS">
+                <ToggleButton fx:id="epubFormatButton" maxHeight="28.0" maxWidth="1.7976931348623157E308"
+                              selected="true" styleClass="epub" text="EPUB">
+                    <toggleGroup>
+                        <ToggleGroup fx:id="format"/>
+                    </toggleGroup>
+                </ToggleButton>
+                <ToggleButton fx:id="latexFormatButton" maxHeight="28.0" maxWidth="1.7976931348623157E308"
+                              styleClass="latex" text="LaTeX" toggleGroup="$format"/>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+                <HBox.margin>
+                    <Insets left="-115.0" right="-95.0"/>
+                </HBox.margin>
+            </HBox>
+            <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" maxHeight="40.0" minWidth="40.0"
+                    onAction="#onHelpButtonClicked" styleClass="help-button" BorderPane.alignment="CENTER">
+                <HBox.margin>
+                    <Insets right="7.0" top="9.0"/>
+                </HBox.margin>
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="help.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" maxHeight="40.0" minWidth="40.0"
+                    onAction="#onCloseButtonClicked" styleClass="close-button" BorderPane.alignment="CENTER">
+                <HBox.margin>
+                    <Insets right="7.0" top="9.0"/>
+                </HBox.margin>
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="close.png"/>
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
         </HBox>
     </top>
     <center>
@@ -38,12 +86,14 @@
         </DropFileChooser>
     </center>
     <bottom>
-        <Button fx:id="transformButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                mnemonicParsing="false" onAction="#onTransformButtonClicked" styleClass="transform-button"
-                text="Transform" BorderPane.alignment="CENTER">
-            <BorderPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0"/>
-            </BorderPane.margin>
-        </Button>
+        <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" minHeight="60.0" styleClass="footer"
+              BorderPane.alignment="CENTER">
+            <Button fx:id="transformButton" mnemonicParsing="false" onAction="#onTransformButtonClicked"
+                    styleClass="transform-button" text="Transform" HBox.hgrow="ALWAYS">
+                <HBox.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </HBox.margin>
+            </Button>
+        </HBox>
     </bottom>
 </BorderPane>
