Translate all strings in front-end

--- a/FrontEnd/src/main/resources/control/drop_file_chooser.fxml
+++ b/FrontEnd/src/main/resources/control/drop_file_chooser.fxml
@@ -16,7 +16,7 @@
                 </ImageView>
                 <Label fx:id="fileLabel" alignment="BOTTOM_CENTER" contentDisplay="CENTER"
                        maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
-                       text="Click and select or drop a published Twine story..." textAlignment="CENTER"
+                       text="%msg.click_or_drop_to_select_file" textAlignment="CENTER"
                        textOverrun="LEADING_ELLIPSIS"/>
             </StackPane>
         </StackPane>
