--- a/FrontEnd/src/main/resources/Application.fxml
+++ b/FrontEnd/src/main/resources/Application.fxml
@@ -28,7 +28,7 @@
                     <Insets top="7.0"/>
                 </HBox.margin>
             </ImageView>
-            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" mouseTransparent="true" text="Spiner"
+            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" mouseTransparent="true" text="%msg.application_title"
                    textFill="WHITE">
                 <font>
                     <Font name="SansSerif Regular" size="23.0"/>
@@ -89,7 +89,7 @@
         <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" minHeight="60.0" styleClass="footer"
               BorderPane.alignment="CENTER">
             <Button fx:id="transformButton" mnemonicParsing="false" onAction="#onTransformButtonClicked"
-                    styleClass="transform-button" text="Transform" HBox.hgrow="ALWAYS">
+                    styleClass="transform-button" text="%msg.transform" HBox.hgrow="ALWAYS">
                 <HBox.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </HBox.margin>
